update loading spinner

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -136,7 +136,9 @@
 <!-- Custom Loading Spinner -->
 <div id="custom-loading-spinner" class="d-none">
   <div class="spinner-wrapper">
-    <div class="spinner"></div>
+    <div class="tool-spinner">
+      <i class="fas fa-wrench fa-3x fa-spin text-white"></i>
+    </div>
     <p class="text-light mt-3">Processing your payment...</p>
   </div>
 </div>
