update webhook handler

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,15 +12,7 @@
 <section class="text-center home-hero-wrapper" role="region" aria-label="Hero Banner">
   <header>
     <!-- Warrior Tools Transparent Logo -->
-    <picture>
-      <source srcset="{{ MEDIA_URL }}warrior-tools-trans-logo.webp" type="image/webp">
-      <img 
-        src="{{ MEDIA_URL }}warrior-tools-trans-logo.png"
-        alt="Warrior Tools Logo"
-        class="hero-logo mb-3"
-        width="300" height="100"
-        loading="lazy">
-    </picture>    
+    <img src="{{ MEDIA_URL }}warrior-tools-trans-logo.png" alt="Warrior Tools Logo" class="hero-logo mb-3">
 
     <h1 class="display-4 logo-font hero-heading mt-3">Welcome to Warrior Tools</h1>
   </header>
