--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- SEO Meta -->
+  <meta name="description" content="Buy premium tools online from Warrior Tools. Trusted by tradespeople and DIYers. Fast UK delivery and reliable checkout.">
+  <meta name="keywords" content="tools, hand tools, power tools, cordless drill, warrior tools, tool shop, UK tools, construction equipment">
+  <meta name="author" content="Brandon Warrior">
   {% endblock %}
 
   {% block extra_meta %}{% endblock %}
